// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Flex Column Direction 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc jPHVkK"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Flex On Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc HLHhZ"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cYNVET sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Justified 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc ePPqtG"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Wrap 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc HLHhZ"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO ctlMKl"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gnNILs"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO VAcwB"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;
